--- a/Car_Price_Predictor.ipynb
+++ b/Car_Price_Predictor.ipynb
@@ -45,10 +45,12 @@
       },
       "outputs": [],
       "source": [
-        "# Input the brand and model you're predicting the price for and the PakWheels ad url\n",
-        "brand = \"Toyota\"\n",
-        "car = \"Corolla\"\n",
+        "# =====================Make Changes Here===================================\n",
+        "brand = \"Toyota\" # Enter Cars brand name\n",
+        "car = \"Corolla\" #Enter Car's name \n",
+        "# paste the url of the ad here\n",
         "url = \"https://www.pakwheels.com/used-cars/toyota-corolla-1999-for-sale-in-islamabad-10488524\"\n",
+        "# =========================================================================\n",
         "\n",
         "\n",
         "model = joblib.load(f\"models\\{brand}_{car}_model.pkl\")\n",
