--- a/Single_Car_Price_Predictor.ipynb
+++ b/Single_Car_Price_Predictor.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcO6jxmVt314SM0MziKUrH",
+      "authorship_tag": "ABX9TyOaFWIhBmzLOGjTlimTZbYI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 24,
       "metadata": {
         "id": "ZxWsUuefJw0Z"
       },
@@ -77,17 +77,15 @@
       "cell_type": "code",
       "source": [
         "# Input the brand and model you're predicting the price for\n",
-        "brand = \"Toyota\"\n",
-        "car = \"Corolla\"\n",
         "url = \"https://www.pakwheels.com/used-cars/toyota-corolla-1997-for-sale-in-islamabad-10429613\"\n",
         "\n",
-        "model = joblib.load(f\"{brand}_{car}_model.pkl\")\n",
-        "mlb = joblib.load(f\"{brand}_{car}_mlb.pkl\")"
+        "model = joblib.load(\"Toyota_Corolla_model.pkl\")\n",
+        "mlb = joblib.load(\"Toyota_Corolla_mlb.pkl\")"
       ],
       "metadata": {
         "id": "agGBF269NAAM"
       },
-      "execution_count": 11,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -195,7 +193,7 @@
       "metadata": {
         "id": "8g2d9g9bON3N"
       },
-      "execution_count": 12,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -240,7 +238,7 @@
       "metadata": {
         "id": "Ce5q6-K2OkqN"
       },
-      "execution_count": 13,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -261,7 +259,7 @@
       "metadata": {
         "id": "-ez-Ydj9OeUN"
       },
-      "execution_count": 14,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -285,7 +283,7 @@
       "metadata": {
         "id": "2N_9oVpnOq5F"
       },
-      "execution_count": 15,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -315,9 +313,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "26e63f12-2f1c-409d-8d51-69e49f61842c"
+        "outputId": "2e7d1aa3-ea3d-4b4e-83d4-b867b27b4c9f"
       },
-      "execution_count": 16,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
