--- a/Single_Car_Price_Predictor.ipynb
+++ b/Single_Car_Price_Predictor.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOaFWIhBmzLOGjTlimTZbYI",
+      "authorship_tag": "ABX9TyPVhQuQBO/KUY95KbZd6YU7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 31,
       "metadata": {
         "id": "ZxWsUuefJw0Z"
       },
@@ -65,27 +65,23 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "#Loading Model"
-      ],
-      "metadata": {
-        "id": "nXzR_OS1M-OF"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "# Input the brand and model you're predicting the price for\n",
+        "#==========================Make Changes Here====================================\n",
+        "\n",
+        "# Paste the url of the ad\n",
         "url = \"https://www.pakwheels.com/used-cars/toyota-corolla-1997-for-sale-in-islamabad-10429613\"\n",
         "\n",
+        "# paste the model and mlb path for either the specific car or all cars\n",
         "model = joblib.load(\"Toyota_Corolla_model.pkl\")\n",
-        "mlb = joblib.load(\"Toyota_Corolla_mlb.pkl\")"
+        "mlb = joblib.load(\"Toyota_Corolla_mlb.pkl\")\n",
+        "\n",
+        "#==============================================================================="
       ],
       "metadata": {
         "id": "agGBF269NAAM"
       },
-      "execution_count": 25,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -193,7 +189,7 @@
       "metadata": {
         "id": "8g2d9g9bON3N"
       },
-      "execution_count": 26,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -238,7 +234,7 @@
       "metadata": {
         "id": "Ce5q6-K2OkqN"
       },
-      "execution_count": 27,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -259,7 +255,7 @@
       "metadata": {
         "id": "-ez-Ydj9OeUN"
       },
-      "execution_count": 28,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -283,7 +279,7 @@
       "metadata": {
         "id": "2N_9oVpnOq5F"
       },
-      "execution_count": 29,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -313,9 +309,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2e7d1aa3-ea3d-4b4e-83d4-b867b27b4c9f"
+        "outputId": "03d05b88-52ec-4f5a-8e5f-8705f3677920"
       },
-      "execution_count": 30,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
