--- a/Single_Car_Price_Predictor.ipynb
+++ b/Single_Car_Price_Predictor.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPVhQuQBO/KUY95KbZd6YU7",
+      "authorship_tag": "ABX9TyOPCM1qFs5Nhwn0J/VMXlqF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,9 +107,8 @@
         "\n",
         "    soup = BeautifulSoup(r.text, \"html.parser\")\n",
         "\n",
-        "    # -----------------------------\n",
-        "    # JSON-LD block\n",
-        "    # -----------------------------\n",
+        "\n",
+        "    # load data from JSON-LD block\n",
         "    scripts = soup.find_all(\"script\", type=\"application/ld+json\")\n",
         "    data = None\n",
         "    for script in scripts:\n",
@@ -136,6 +135,7 @@
         "    else:\n",
         "        brand_name = \"\"\n",
         "\n",
+        "    #save all the data into car_data\n",
         "    car_data = {\n",
         "        \"Name\": data.get(\"name\", \"\"),\n",
         "        \"City\": data.get(\"name\", \"\").split(\"for sale in\")[-1].strip() if \"for sale in\" in data.get(\"name\", \"\") else \"\",\n",
@@ -153,9 +153,8 @@
         "        \"Description\": data.get(\"description\", \"\")\n",
         "    }\n",
         "\n",
-        "    # -----------------------------\n",
-        "    # Extra specs\n",
-        "    # -----------------------------\n",
+        "\n",
+        "    # saving any extra specs\n",
         "    specs_ul = soup.find(\"ul\", id=\"scroll_car_detail\")\n",
         "    if specs_ul:\n",
         "        spec_list = specs_ul.find_all(\"li\")\n",
@@ -164,18 +163,14 @@
         "            val = spec_list[i + 1].get_text(strip=True)\n",
         "            car_data[key] = val\n",
         "\n",
-        "    # -----------------------------\n",
-        "    # Features\n",
-        "    # -----------------------------\n",
+        "    # saving the Features in a list\n",
         "    features = soup.find(\"ul\", class_=\"car-feature-list\")\n",
         "    if features:\n",
         "        car_data[\"Features\"] = [li.get_text(strip=True) for li in features.find_all(\"li\")]\n",
         "    else:\n",
         "        car_data[\"Features\"] = []\n",
         "\n",
-        "    # -----------------------------\n",
-        "    # Seller comments\n",
-        "    # -----------------------------\n",
+        "    # saving the seller comments\n",
         "    comments_heading = soup.find(\"h2\", id=\"scroll_seller_comments\")\n",
         "    if comments_heading:\n",
         "        comments_div = comments_heading.find_next(\"div\")\n",
