--- a/Data_analysis,_model_training_&_results.ipynb
+++ b/Data_analysis,_model_training_&_results.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOaU6D21FbLCK7jBWg6kr2T",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyP6gyE0e5ufostolocUyswq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 122,
       "metadata": {
         "id": "gSRYaBUi0ksb"
       },
@@ -56,7 +57,8 @@
         "from math import sqrt\n",
         "from sklearn.preprocessing import MinMaxScaler\n",
         "import matplotlib.pyplot as plt\n",
-        "import joblib"
+        "import joblib\n",
+        "from matplotlib.colors import PowerNorm"
       ]
     },
     {
@@ -77,20 +79,19 @@
         "dataset_path = \"/content/Corolla_ads_data.csv\"\n",
         "df = pd.read_csv(dataset_path)\n",
         "\n",
-        "# If you want to train for one car type, set use_all_data = False and specify brand & car.\n",
-        "# If you want to train on ALL cars in the dataset, set use_all_data = True.\n",
+        "# Brand and Model of the for which to train model for, set use_all_data to use all brands and models data in the file\n",
         "use_all_data = False\n",
         "brand = \"Toyota\"\n",
         "car = \"Corolla\"\n",
         "\n",
         "#final results with price comparisons file path\n",
-        "save_path = f\"{brand}_{car}_results.csv\"\n",
+        "save_path = \"Toyota_Corolla_results.csv\"\n",
         "#==============================================================================="
       ],
       "metadata": {
         "id": "PU7R-O2S0suE"
       },
-      "execution_count": 109,
+      "execution_count": 123,
       "outputs": []
     },
     {
@@ -116,9 +117,9 @@
           "height": 590
         },
         "id": "hac_NyAD8sJV",
-        "outputId": "eb8e37be-a0a1-4e85-8aca-bd181364b346"
+        "outputId": "eeec79a6-79cb-4884-d97e-9be09e5bc270"
       },
-      "execution_count": 110,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -168,7 +169,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-258da0a1-1916-4eb4-9db1-0124306653b7\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f9fcfca9-2197-4042-b323-2bc27622ce04\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -331,7 +332,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-258da0a1-1916-4eb4-9db1-0124306653b7')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f9fcfca9-2197-4042-b323-2bc27622ce04')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -383,12 +384,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-258da0a1-1916-4eb4-9db1-0124306653b7 button.colab-df-convert');\n",
+              "        document.querySelector('#df-f9fcfca9-2197-4042-b323-2bc27622ce04 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-258da0a1-1916-4eb4-9db1-0124306653b7');\n",
+              "        const element = document.querySelector('#df-f9fcfca9-2197-4042-b323-2bc27622ce04');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -408,8 +409,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-b5013683-9e6b-49ea-9695-6ac2ebcdc15f\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b5013683-9e6b-49ea-9695-6ac2ebcdc15f')\"\n",
+              "    <div id=\"df-9fc0debd-4fb4-4244-b9e0-ed62bd1a5fd6\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9fc0debd-4fb4-4244-b9e0-ed62bd1a5fd6')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -528,7 +529,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-b5013683-9e6b-49ea-9695-6ac2ebcdc15f button');\n",
+              "            document.querySelector('#df-9fc0debd-4fb4-4244-b9e0-ed62bd1a5fd6 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -545,7 +546,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 110
+          "execution_count": 124
         }
       ]
     },
@@ -584,7 +585,7 @@
       "metadata": {
         "id": "HYr4SWYB0vS7"
       },
-      "execution_count": 111,
+      "execution_count": 125,
       "outputs": []
     },
     {
@@ -608,7 +609,7 @@
       "metadata": {
         "id": "Q2kX9hz703Bb"
       },
-      "execution_count": 112,
+      "execution_count": 126,
       "outputs": []
     },
     {
@@ -632,7 +633,7 @@
         "        return []\n",
         "df[\"FeaturesList\"] = df[\"Features\"].apply(parse_features)\n",
         "\n",
-        "# Convert to binary columns\n",
+        "# Convert features list to binary columns\n",
         "mlb = MultiLabelBinarizer()\n",
         "features_binary = mlb.fit_transform(df[\"FeaturesList\"])\n",
         "features_df = pd.DataFrame(features_binary, columns=mlb.classes_, index=df.index)\n",
@@ -641,7 +642,7 @@
       "metadata": {
         "id": "pczvNk690-d7"
       },
-      "execution_count": 113,
+      "execution_count": 127,
       "outputs": []
     },
     {
@@ -658,7 +659,7 @@
       "metadata": {
         "id": "sZOhfdRA1VaU"
       },
-      "execution_count": 114,
+      "execution_count": 128,
       "outputs": []
     },
     {
@@ -673,10 +674,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "# Example DataFrame\n",
         "df_plot = df[[\"CarAge\", \"Mileage\", \"Price\"]].copy()\n",
         "\n",
         "# Plot 1: CarAge vs Price\n",
@@ -703,9 +700,9 @@
           "height": 957
         },
         "id": "SNTn3TJP1dqs",
-        "outputId": "a6214194-bf11-444b-e4af-faa0147a77f0"
+        "outputId": "dca7ffbc-6648-4479-f52e-fd8a1ff8a424"
       },
-      "execution_count": 115,
+      "execution_count": 129,
       "outputs": [
         {
           "output_type": "display_data",
@@ -732,19 +729,16 @@
     {
       "cell_type": "code",
       "source": [
-        "import matplotlib.pyplot as plt\n",
-        "from matplotlib.colors import PowerNorm\n",
-        "\n",
         "x = df['CarAge']\n",
         "y = df['Price']\n",
-        "color_val = df['Mileage']  # the variable to map to color\n",
+        "color_val = df['Mileage']\n",
         "\n",
         "plt.figure(figsize=(8,6))\n",
         "sc = plt.scatter(\n",
         "    x, y,\n",
         "    c=color_val,\n",
         "    cmap='viridis',\n",
-        "    norm=PowerNorm(gamma=0.55),  # gamma <1 emphasizes lower values\n",
+        "    norm=PowerNorm(gamma=0.55),\n",
         "    s=50,\n",
         "    alpha=0.9\n",
         ")\n",
@@ -760,9 +754,9 @@
           "height": 564
         },
         "id": "jVCv5n7bgwFh",
-        "outputId": "5ccb76e1-6ab5-4844-b8f4-ba3171b371b4"
+        "outputId": "c64f460f-44dd-4f5e-9dcb-6ee0f5c440f8"
       },
-      "execution_count": 116,
+      "execution_count": 130,
       "outputs": [
         {
           "output_type": "display_data",
@@ -791,14 +785,14 @@
         "# Features (include binary feature columns dynamically)\n",
         "feature_cols = list(mlb.classes_)\n",
         "\n",
-        "X = df[[\"City\", \"Mileage\", \"Fuel\", \"Transmission\", \"Engine Capacity\",\n",
+        "X = df[[\"City\",\"Brand\",\"Model\", \"Mileage\", \"Fuel\", \"Transmission\", \"Engine Capacity\",\n",
         "        \"Color\", \"CarAge\", \"Registered In\", \"Assembly\"] + feature_cols]\n",
         "y = df[\"Price\"]\n",
         "\n",
         "X.head()\n",
         "\n",
         "# Categorical & numeric cols\n",
-        "categorical_cols = [\"City\", \"Fuel\", \"Transmission\", \"Color\", \"Registered In\", \"Assembly\"]\n",
+        "categorical_cols = [\"City\",\"Brand\",\"Model\", \"Fuel\", \"Transmission\", \"Color\", \"Registered In\", \"Assembly\"]\n",
         "numeric_cols = [\"Mileage\", \"Engine Capacity\", \"CarAge\"] + feature_cols\n",
         "\n",
         "# Preprocessor\n",
@@ -810,7 +804,7 @@
       "metadata": {
         "id": "GdfAbbt01Zbz"
       },
-      "execution_count": 117,
+      "execution_count": 131,
       "outputs": []
     },
     {
@@ -823,9 +817,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yrSBwB9PZOe4",
-        "outputId": "b69593a0-3455-47e9-c7ba-56a629b3d35e"
+        "outputId": "0c011b04-25ce-4b7c-9cd2-c6b9e454ba66"
       },
-      "execution_count": 118,
+      "execution_count": 132,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -835,7 +829,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 118
+          "execution_count": 132
         }
       ]
     },
@@ -874,9 +868,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4Ij-C3CP4X3s",
-        "outputId": "62b62a6b-8e97-490d-e4a2-eb32882b8a7e"
+        "outputId": "787b2ba2-2cb6-485a-8332-9c66a446fb4d"
       },
-      "execution_count": 119,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "stream",
@@ -900,7 +894,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "# Predictions\n",
         "y_pred = model.predict(X_test)\n",
         "\n",
@@ -921,18 +914,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H51nLsD_4saj",
-        "outputId": "64ce0605-8dcc-4008-f5d4-1fe817b7a8e7"
+        "outputId": "3b8cd847-cfc3-422f-8efa-9f68b2401bcd"
       },
-      "execution_count": 120,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "MAE: 257,038\n",
-            "RMSE: 382,052\n",
-            "R²: 0.951\n",
-            "mape: 9.25\n"
+            "MAE: 257,905\n",
+            "RMSE: 383,983\n",
+            "R²: 0.950\n",
+            "mape: 9.26\n"
           ]
         }
       ]
@@ -949,9 +942,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "\n",
         "# Predictions\n",
         "y_pred = model.predict(X)\n",
         "\n",
@@ -967,7 +957,7 @@
         "    \"Mileage\": df.loc[y.index, \"Mileage\"],\n",
         "    \"Actual Price\": y,\n",
         "    \"Predicted Price\": y_pred,\n",
-        "    \"Error\": y - y_pred,\n",
+        "    \"Absolute Error\": y - y_pred,\n",
         "    \"Percentage Error (%)\": ((y - y_pred) / y) * 100,\n",
         "    \"Ad URL\": df.loc[y.index, \"Ad URL\"]\n",
         "}).reset_index(drop=True)\n",
@@ -986,9 +976,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wjgvpy_SDvlw",
-        "outputId": "c1465b5a-2352-4de4-e19d-5650f3a0707f"
+        "outputId": "b902fac9-85ee-426d-edb1-5f2a8dd48516"
       },
-      "execution_count": 121,
+      "execution_count": 135,
       "outputs": [
         {
           "output_type": "stream",
@@ -997,37 +987,37 @@
             "                                        Name  \\\n",
             "0  Toyota Corolla 2011 for sale in Islamabad   \n",
             "1  Toyota Corolla 2021 for sale in Islamabad   \n",
-            "2  Toyota Corolla 2018 for sale in Islamabad   \n",
-            "3  Toyota Corolla 2020 for sale in Islamabad   \n",
+            "2  Toyota Corolla 2020 for sale in Islamabad   \n",
+            "3  Toyota Corolla 2018 for sale in Islamabad   \n",
             "4  Toyota Corolla 2015 for sale in Islamabad   \n",
             "\n",
             "                                         Description  \\\n",
             "0  Toyota Corolla Altis 2011 model \\r\\n1.8 VVT-i ...   \n",
             "1  First owner \\nB to B\\nScratch less\\nLittle bit...   \n",
-            "2  Toyota Corolla Grande 2018 Black Color Karachi...   \n",
-            "3   2020 model 2024 Registered 4 grade auction sh...   \n",
+            "2   2020 model 2024 Registered 4 grade auction sh...   \n",
+            "3  Toyota Corolla Grande 2018 Black Color Karachi...   \n",
             "4   Firh lock total shower Petrol driven, CNG nev...   \n",
             "\n",
             "                                     Seller Comments       City   Brand  \\\n",
             "0  Toyota Corolla Altis 2011 model 1.8 VVT-i petr...  Islamabad  Toyota   \n",
             "1  First owner B to B Scratch less Little bit neg...  Islamabad  Toyota   \n",
-            "2  Toyota Corolla Grande 2018 Black Color Karachi...  Islamabad  Toyota   \n",
-            "3  2020 model 2024 Registered 4 grade auction she...  Islamabad  Toyota   \n",
+            "2  2020 model 2024 Registered 4 grade auction she...  Islamabad  Toyota   \n",
+            "3  Toyota Corolla Grande 2018 Black Color Karachi...  Islamabad  Toyota   \n",
             "4  Firh lock total shower Petrol driven, CNG neve...  Islamabad  Toyota   \n",
             "\n",
             "     Model  Year  Mileage  Actual Price  Predicted Price  Absolute Error  \\\n",
-            "0  Corolla  2011   125000       2500000     3.516870e+06   -1.016870e+06   \n",
-            "1  Corolla  2021    41000       4975000     5.901917e+06   -9.269167e+05   \n",
-            "2  Corolla  2018    64000       5500000     6.224583e+06   -7.245833e+05   \n",
-            "3  Corolla  2020   125000       6700000     7.405780e+06   -7.057800e+05   \n",
-            "4  Corolla  2015   170000       2550000     3.218117e+06   -6.681166e+05   \n",
+            "0  Corolla  2011   125000       2500000     3.519533e+06   -1.019533e+06   \n",
+            "1  Corolla  2021    41000       4975000     5.923233e+06   -9.482333e+05   \n",
+            "2  Corolla  2020   125000       6700000     7.423343e+06   -7.233433e+05   \n",
+            "3  Corolla  2018    64000       5500000     6.217583e+06   -7.175833e+05   \n",
+            "4  Corolla  2015   170000       2550000     3.206133e+06   -6.561333e+05   \n",
             "\n",
             "   Percentage Error (%)                                             Ad URL  \n",
-            "0            -40.674800  https://www.pakwheels.com/used-cars/toyota-cor...  \n",
-            "1            -18.631491  https://www.pakwheels.com/used-cars/toyota-cor...  \n",
-            "2            -13.174242  https://www.pakwheels.com/used-cars/toyota-cor...  \n",
-            "3            -10.534030  https://www.pakwheels.com/used-cars/toyota-cor...  \n",
-            "4            -26.200652  https://www.pakwheels.com/used-cars/toyota-cor...  \n",
+            "0            -40.781333  https://www.pakwheels.com/used-cars/toyota-cor...  \n",
+            "1            -19.059966  https://www.pakwheels.com/used-cars/toyota-cor...  \n",
+            "2            -10.796169  https://www.pakwheels.com/used-cars/toyota-cor...  \n",
+            "3            -13.046969  https://www.pakwheels.com/used-cars/toyota-cor...  \n",
+            "4            -25.730717  https://www.pakwheels.com/used-cars/toyota-cor...  \n",
             "results saved to Toyota_Corolla_results.csv\n"
           ]
         }
