--- a/Data_analysis,_model_training_&_results.ipynb
+++ b/Data_analysis,_model_training_&_results.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyP6gyE0e5ufostolocUyswq",
+      "authorship_tag": "ABX9TyPTCijzZ+RHPFxx9nGWsGeZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": 198,
       "metadata": {
         "id": "gSRYaBUi0ksb"
       },
@@ -79,7 +78,8 @@
         "dataset_path = \"/content/Corolla_ads_data.csv\"\n",
         "df = pd.read_csv(dataset_path)\n",
         "\n",
-        "# Brand and Model of the for which to train model for, set use_all_data to use all brands and models data in the file\n",
+        "# If you want to train for one car type, set use_all_data = False and specify brand & car.\n",
+        "# If you want to train on ALL cars in the dataset, set use_all_data = True.\n",
         "use_all_data = False\n",
         "brand = \"Toyota\"\n",
         "car = \"Corolla\"\n",
@@ -91,7 +91,7 @@
       "metadata": {
         "id": "PU7R-O2S0suE"
       },
-      "execution_count": 123,
+      "execution_count": 199,
       "outputs": []
     },
     {
@@ -108,6 +108,8 @@
       "source": [
         "if not use_all_data:\n",
         "    df = df[(df[\"Brand\"] == brand) & (df[\"Model\"] == car)]\n",
+        "    brand = \"all\"\n",
+        "    car = \"cars\"\n",
         "\n",
         "df.head()"
       ],
@@ -117,9 +119,9 @@
           "height": 590
         },
         "id": "hac_NyAD8sJV",
-        "outputId": "eeec79a6-79cb-4884-d97e-9be09e5bc270"
+        "outputId": "9bed0884-3b0c-40d7-e33b-6933c2b90273"
       },
-      "execution_count": 124,
+      "execution_count": 200,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -169,7 +171,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f9fcfca9-2197-4042-b323-2bc27622ce04\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9112beaf-6af0-49da-9733-462e330753f2\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -332,7 +334,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f9fcfca9-2197-4042-b323-2bc27622ce04')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9112beaf-6af0-49da-9733-462e330753f2')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -384,12 +386,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-f9fcfca9-2197-4042-b323-2bc27622ce04 button.colab-df-convert');\n",
+              "        document.querySelector('#df-9112beaf-6af0-49da-9733-462e330753f2 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-f9fcfca9-2197-4042-b323-2bc27622ce04');\n",
+              "        const element = document.querySelector('#df-9112beaf-6af0-49da-9733-462e330753f2');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -409,8 +411,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-9fc0debd-4fb4-4244-b9e0-ed62bd1a5fd6\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9fc0debd-4fb4-4244-b9e0-ed62bd1a5fd6')\"\n",
+              "    <div id=\"df-8e9b5402-7035-41ad-a5aa-43fd838de5fc\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8e9b5402-7035-41ad-a5aa-43fd838de5fc')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -529,7 +531,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-9fc0debd-4fb4-4244-b9e0-ed62bd1a5fd6 button');\n",
+              "            document.querySelector('#df-8e9b5402-7035-41ad-a5aa-43fd838de5fc button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -546,7 +548,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 124
+          "execution_count": 200
         }
       ]
     },
@@ -562,7 +564,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df.fillna(0)\n",
+        "\n",
         "\n",
         "# Clean mileage (e.g. \"52,000 km\" -> 52000)\n",
         "def clean_mileage(x):\n",
@@ -585,7 +587,7 @@
       "metadata": {
         "id": "HYr4SWYB0vS7"
       },
-      "execution_count": 125,
+      "execution_count": 201,
       "outputs": []
     },
     {
@@ -609,7 +611,7 @@
       "metadata": {
         "id": "Q2kX9hz703Bb"
       },
-      "execution_count": 126,
+      "execution_count": 202,
       "outputs": []
     },
     {
@@ -642,7 +644,7 @@
       "metadata": {
         "id": "pczvNk690-d7"
       },
-      "execution_count": 127,
+      "execution_count": 203,
       "outputs": []
     },
     {
@@ -659,7 +661,7 @@
       "metadata": {
         "id": "sZOhfdRA1VaU"
       },
-      "execution_count": 128,
+      "execution_count": 204,
       "outputs": []
     },
     {
@@ -700,9 +702,9 @@
           "height": 957
         },
         "id": "SNTn3TJP1dqs",
-        "outputId": "dca7ffbc-6648-4479-f52e-fd8a1ff8a424"
+        "outputId": "e2e6510c-4f48-4351-f3ee-9c7c3ac248ed"
       },
-      "execution_count": 129,
+      "execution_count": 205,
       "outputs": [
         {
           "output_type": "display_data",
@@ -754,9 +756,9 @@
           "height": 564
         },
         "id": "jVCv5n7bgwFh",
-        "outputId": "c64f460f-44dd-4f5e-9dcb-6ee0f5c440f8"
+        "outputId": "5178ffcf-baa4-4065-81cf-53e7ee4777e6"
       },
-      "execution_count": 130,
+      "execution_count": 206,
       "outputs": [
         {
           "output_type": "display_data",
@@ -789,7 +791,12 @@
         "        \"Color\", \"CarAge\", \"Registered In\", \"Assembly\"] + feature_cols]\n",
         "y = df[\"Price\"]\n",
         "\n",
-        "X.head()\n",
+        "# removing Nan values from X\n",
+        "data = X.join(y)\n",
+        "data = data.dropna()\n",
+        "X = data.drop(\"Price\", axis=1)\n",
+        "y = data[\"Price\"]\n",
+        "\n",
         "\n",
         "# Categorical & numeric cols\n",
         "categorical_cols = [\"City\",\"Brand\",\"Model\", \"Fuel\", \"Transmission\", \"Color\", \"Registered In\", \"Assembly\"]\n",
@@ -804,7 +811,7 @@
       "metadata": {
         "id": "GdfAbbt01Zbz"
       },
-      "execution_count": 131,
+      "execution_count": 207,
       "outputs": []
     },
     {
@@ -817,9 +824,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yrSBwB9PZOe4",
-        "outputId": "0c011b04-25ce-4b7c-9cd2-c6b9e454ba66"
+        "outputId": "4b9ae1f1-9ed2-4277-df82-b9df661d6598"
       },
-      "execution_count": 132,
+      "execution_count": 208,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -829,7 +836,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 132
+          "execution_count": 208
         }
       ]
     },
@@ -868,16 +875,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4Ij-C3CP4X3s",
-        "outputId": "787b2ba2-2cb6-485a-8332-9c66a446fb4d"
+        "outputId": "9c870d41-b206-4c96-ea80-d069ce4d7568"
       },
-      "execution_count": 133,
+      "execution_count": 209,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model saved to Toyota_Corolla_model.pkl\n",
-            "MLB saved to Toyota_Corolla_mlb.pkl\n"
+            "Model saved to all_cars_model.pkl\n",
+            "MLB saved to all_cars_mlb.pkl\n"
           ]
         }
       ]
@@ -914,9 +921,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H51nLsD_4saj",
-        "outputId": "3b8cd847-cfc3-422f-8efa-9f68b2401bcd"
+        "outputId": "9c91b8ff-b478-4ade-d311-3103f0c92670"
       },
-      "execution_count": 134,
+      "execution_count": 210,
       "outputs": [
         {
           "output_type": "stream",
@@ -976,9 +983,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wjgvpy_SDvlw",
-        "outputId": "b902fac9-85ee-426d-edb1-5f2a8dd48516"
+        "outputId": "e3b924f4-5eea-44c9-fe9a-f4359886b1cc"
       },
-      "execution_count": 135,
+      "execution_count": 211,
       "outputs": [
         {
           "output_type": "stream",
